--- a/Front-end_Tiennh21/Assignment/layout/ChangePassword.html
+++ b/Front-end_Tiennh21/Assignment/layout/ChangePassword.html
@@ -1,48 +1,144 @@
-<div>
+<div ng-controller="changePassword">
     <div class="col-lg-6 m-auto mt-5">
         <div class="container wrap-form-head-register">
-                <h2 class="text-center pt-4">Change Password</h2>
-                <div class="text-center">
-                    <img src="images/imagePic/update.gif" width="64px" class="img-circle img-responsive img-fluid "
-                        alt="">
-                </div>
-                <!-- <p class="text-center">Tài khoản: {{student.fullname}}</p> -->
-                <div class="ps-5 pe-5 pb-5 ">
-                    <div class="container ">
-                        <div class="row">
-                            <div class="col-md-3"></div>
-                            <div class="col-md-6 rounded-3">
-                                <form name="">
-                                    <div class="input-group mt-3">
-                                        <span class="input-group-text" id="basic-addon1">
-                                            <i class="fa fa-key" aria-hidden="true"></i>
-                                        </span>
-                                        <input type="password" class="form-control" placeholder="Password old"
-                                            aria-label="Username" aria-describedby="basic-addon1">
+            <h2 class="text-center pt-4">Change Password</h2>
+            <!-- <p class="text-center">Tài khoản: {{student.username}}</p> -->
+            <p class="text-center">{{(student == null) ? '' : 'Tài Khoản: ' + student.fullname}}</p>
+
+            <div class="text-center">
+                <img src="images/imagePic/update.gif" width="64px" class="img-circle img-responsive img-fluid " alt="">
+            </div>
+            <!-- <p class="text-center">Tài khoản: {{student.fullname}}</p> -->
+            <div class="ps-5 pe-5 pb-5 ">
+                <div class="container ">
+                    <div class="row">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-6 rounded-3">
+                            <form name="formChange">
+                                <div class="input-group mt-3">
+                                    <span class="input-group-text" id="basic-addon1">
+                                        <i class="fa fa-key" aria-hidden="true"></i>
+                                    </span>
+                                    <input ng-model="oldPassword" name="oldPassword" type="oldPassword"
+                                        class="form-control" placeholder="Password old" aria-label="Username"
+                                        aria-describedby="basic-addon1" required>
+                                </div>
+                                <div ng-hide="formChange.oldPassword.$untouched ||formChange.oldPassword.$valid">
+                                    <small ng-show="formChange.oldPassword.$error.required" id="oldpassword"
+                                        class="form-text text-danger fst-italic">Vui lòng nhập mật khẩu cũ</small>
+                                    <small ng-show="formChange.oldPassword.$error.minlength" id="oldpassword"
+                                        class="form-text text-danger fst-italic">Mật khẩu không đúng</small>
+                                </div>
+                                <!-- <div class="input-group mt-3">
+                                    <span class="input-group-text" id="basic-addon1">
+                                        <i class="fa fa-key" aria-hidden="true"></i>
+                                    </span>
+                                    <input ng-model="studentR.password" type="password" class="form-control"
+                                        placeholder="Password new" aria-label="Username"
+                                        aria-describedby="basic-addon1">
+                                </div> -->
+                                <!-- <div class="input-group mt-3">
+                                    <span class="input-group-text" id="basic-addon1">
+                                        <i class="fa fa-key" aria-hidden="true"></i>
+                                    </span>
+                                    <input class="form-control" type="password" id="password" name="password"
+                                        ng-model="studentR.password" ng-minlength="8" ng-maxlength="20"
+                                        ng-pattern="/(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z])/" placeholder="Password"
+                                        required />
+
+                                </div>
+                                
+                                <div ng-hide="formChange.password.$untouched ||formChange.password.$valid">
+                                        <div class="fieldset"
+                                            ng-class="{'has-error':studentR.password.$invalid && !studentR.password.$pristine}">
+                                        <small ng-show="formChange.password.$error.required" id="oldpassword"
+                                            class="form-text text-danger fst-italic">Vui lòng nhập mật mới</small>
+                                        <p ng-show="formChange.password.$error.minlength"
+                                            class="text-danger fst-italic">
+                                            Passwords must be between 8 and 20 characters.</p>
+                                        <p ng-show="formChange.password.$error.pattern" class="text-danger fst-italic">
+                                            Must contain one lower &amp; uppercase letter, and one non-alpha
+                                            character
+                                            (a number or
+                                            a
+                                            symbol.)</p>
                                     </div>
-                                    <div class="input-group mt-3">
-                                        <span class="input-group-text" id="basic-addon1">
-                                            <i class="fa fa-key" aria-hidden="true"></i>
-                                        </span>
-                                        <input type="password" class="form-control" placeholder="Password new"
-                                            aria-label="Username" aria-describedby="basic-addon1">
+                                </div> -->
+                                <!-- <div class="input-group mt-3">
+                                    <span class="input-group-text" id="basic-addon1">
+                                        <i class="fa fa-key" aria-hidden="true"></i>
+                                    </span>
+                                    <input ng-model="RenewPassword" type="RenewPassword" class="form-control"
+                                        placeholder="Confirm Password" aria-label="Username"
+                                        aria-describedby="basic-addon1">
+
+                                    <input class="form-control" type="password" id="password_c" name="RenewPassword"
+                                        ng-model="RenewPassword" placeholder="Confirm password"
+                                        valid-password-c="RenewPassword" required />
+                                </div> -->
+
+                                <!--                             
+                                <div ng-hide="formChange.RenewPassword.$untouched ||formChange.RenewPassword.$valid">
+                                    <div class="fieldset"
+                                        ng-class="{'has-error':studentR.RenewPassword.$invalid && !studentR.RenewPassword.$pristine}">
+                                        <p ng-show="formRegister.RenewPassword.$error.noMatch"
+                                            class="text-danger fst-italic">Passwords
+                                            do not
+                                            match.</span>
+                                            <p ng-show="formRegister.password_c.$error.required" class="error">*</p>
                                     </div>
-                                    <div class="input-group mt-3">
-                                        <span class="input-group-text" id="basic-addon1">
-                                            <i class="fa fa-key" aria-hidden="true"></i>
-                                        </span>
-                                        <input type="password" class="form-control" placeholder="Confirm Password"
-                                            aria-label="Username" aria-describedby="basic-addon1">
-                                    </div>
-                                    <div class="text-center mt-4">
-                                        <button class="btn btn-primary shadow-lg">Thay đổi</button>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="col-md-3"></div>
+                                </div> -->
+                                <div class="input-group mt-3">
+                                    <span class="input-group-text" id="basic-addon1">
+                                        <i class="fa fa-key" aria-hidden="true"></i>
+                                    </span>
+                                    <input class="form-control" type="password" id="password" name="password"
+                                        ng-model="studentR.password" ng-minlength="8" ng-maxlength="20"
+                                        ng-pattern="/(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z])/" placeholder="Password"
+                                        required />
+                                </div>
+                                <div class="fieldset"
+                                    ng-class="{'has-error':studentR.password.$invalid && !studentR.password.$pristine}">
+                                    <!-- <p ng-show="formRegister.password.$error.required" class="error">*</p> -->
+                                    <p ng-show="formChange.password.$error.minlength" class="text-danger fst-italic">
+                                        Passwords must be between 8 and 20 characters.</p>
+                                    <p ng-show="formChange.password.$error.pattern" class="text-danger fst-italic">
+                                        Must contain one lower &amp; uppercase letter, and one non-alpha character (a
+                                        number or
+                                        a
+                                        symbol.)</p>
+                                </div>
+
+                                <div class="input-group mt-3">
+                                    <span class="input-group-text" id="basic-addon1">
+                                        <i class="fa fa-key" aria-hidden="true"></i>
+                                    </span>
+                                    <input class="form-control" type="password" id="password_c" name="password_c"
+                                        ng-model="studentR.password_c" placeholder="Confirm password"
+                                        valid-password-c="studentR.password" required />
+                                </div>
+                                <div class="fieldset"
+                                    ng-class="{'has-error':studentR.password_c.$invalid && !studentR.password_c.$pristine}">
+
+
+                                    <p ng-show="formChange.password_c.$error.noMatch" class="text-danger fst-italic">
+                                        Passwords
+                                        do not
+                                        match.</span>
+                                        <!-- <p ng-show="formRegister.password_c.$error.required" class="error">*</p> -->
+                                </div>
+
+                                <div class="text-center mt-4">
+                                    <button class="btn btn-primary shadow-lg" value="submit"
+                                        ng-disabled="formChange.$invalid" ng-click="changePassword()">Thay
+                                        đổi</button>
+                                </div>
+                            </form>
                         </div>
+                        <div class="col-md-3"></div>
                     </div>
                 </div>
+            </div>
         </div>
     </div>
 </div>
