--- a/Front-end_Tiennh21/Assignment/layout/ListQuestion.html
+++ b/Front-end_Tiennh21/Assignment/layout/ListQuestion.html
@@ -1,16 +1,61 @@
-<div class="row">
+<div class="row" ng-controller="testQuestion">
+    <!--Alert-->
+
+
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header rounded mx-auto d-block">
+                    <img src="images/imagePic/sure.gif" alt="">
+                </div>
+                <div class="modal-body">
+                    <div class="h3 text-center mb-1">
+                        Bạn chắc vơi đáp án này chứ ?
+                    </div>
+                    <div class="row p-0">
+                        <div class=" col-lg-6 ">
+                            <button type="button" class="btn btn-danger col-lg-10 " data-bs-dismiss="modal">
+                                <img src="https://img.icons8.com/color/32/000000/cancel--v1.png" />
+                                Không</button>
+                        </div>
+                        <div class=" col-lg-6 d-flex justify-content-end">
+                            <button ng-click="mark(); element[indexQuestion].sub = 0" class="btn btn-success col-lg-10 "
+                                data-bs-dismiss="modal">
+                                <img src="https://img.icons8.com/fluency/32/000000/checkmark.png" />
+                                Có</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
     <div class="col-2"></div>
     <section class="px-5 py-4 wrap-form-head-register container-about mt-3 col-8">
         <h2 class="h1-responsive fw-blod text-center">Trang thi trắc nghiệm</h2>
         <div class="row">
             <div class="col-6">
                 <img src="https://img.icons8.com/office/80/000000/time.png" />
-                Thời gian
+                <span style="width: 200px;" class=" fw-bold fs-4"> &ensp;
+                    Thời gian:
+                    {{(timer-timer%60)/60}}:{{timer%60}}</span>
+
             </div>
             <div class="col-6">
-                <h3 class="float-end">Điểm</h3>
+                <div class="row float-end">
+                    <h5 class="col-12">Điểm</h5>
+                    <h4 class="font-weight-bold dark-grey-text col-12">{{testMark}} đ</h4>
+                </div>
+
             </div>
 
+        </div>
+        <div class="progress mt-4">
+            <div class="progress-bar" role="progressbar" style="width:  {{timer/900*100}}%" aria-valuenow="25"
+                aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <hr class="mt-3 mb-3">
         <div class="row">
@@ -18,15 +63,32 @@
             <div class="card">
                 <div class="body">
                     <div class="row">
-                        <h2 class="text-center mt-3">Bài Thi: Lập trình nâng cao</h2>
+                        <h2 class="text-center mt-3">Bài Thi: {{subject.Name}}</h2>
                     </div>
                     <hr class="mt-3 mb-3">
                     <div class="row">
                         <div class="col-12 col-xxl-4 text-center">
-                            <img class="img-responsive img-fluid" src="images/logos/ADAV.jpg" alt="">
+                            <img class="img-responsive img-fluid" src="images/logos/{{subject.Logo}}" alt="1231">
                         </div>
                         <div class="col-xxl-8">
-                            <h4>Câu hỏi</h4>
+                            <h4>
+                                {{indexQuestion + 1 + '. ' +questions[indexQuestion].Text}}
+                            </h4>
+                            <form name="formTest" class="
+                            {{(element[indexQuestion].sub ==0) ? 'disabled' : '' }}
+                            "
+                                style="{{(element[indexQuestion].sub == 0) ? 'background-image: url(images/imagePic/done.jpg); background-position: center; background-repeat: no-repeat; background-size: contain' : ''}}">
+                                <fieldset ng-repeat="question in questions[indexQuestion].Answers" class="form-check">
+                                    <input ng-model="element[indexQuestion].answer" class="form-check-input"
+                                        id="{{'question' + $index}}" value={{question.Id}} type="radio" name="inputQ"
+                                        required>
+                                    <label class="form-check-label fs-4"
+                                        style="font-family: 'Times New Roman', Times, serif;"
+                                        for="{{'question'+$index}}">{{question.Text}}</label>
+                                </fieldset>
+
+
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -35,24 +97,41 @@
 
         <div class="row mt-4">
             <div class="col-12">
-                <button class="btn btn-primary float-end">Trả lời</button>
+                <button class="btn btn-primary float-end"
+                    ng-disabled="element[indexQuestion].sub == 0 || formTest.inputQ.$invalid" type="button"
+                    data-bs-toggle="modal" data-bs-target="#staticBackdrop">Trả lời</button>
             </div>
         </div>
 
         <div class="row">
             <div class="col-12">
                 <nav aria-label="...">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item disabled">
-                            <a class="page-link">Previous</a>
+                    <ul class="pagination justify-content-center ">
+                        <li ng-click="move(0)" class="page-item {{(indexQuestion+1 == 1)?'disabled':''}}"><a href
+                                class="page-link">First</a></li>
+                        <li class="page-item
+                        {{indexQuestion + 1 == 1 ? 'disabled' : ''}}">
+                            <a href ng-click="move(indexQuestion-1)" class="page-link" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                                <span class="sr-only">Previous</span>
+                            </a>
                         </li>
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item active" aria-current="page">
-                            <a class="page-link" href="#">2</a>
+                        <li ng-hide="indexQuestion+1 <= 4" class="page-item"><a class="page-link">...</a></li>
+                        <li class="page-item" ng-repeat="x in questions">
+                            <a href ng-click="move($index)" ng-if="$index > indexQuestion-4 && $index < indexQuestion+4"
+                                class="waves-effect rounded page-link {{($index==indexQuestion)?'red white-text':''}}">{{$index+1}}</a>
                         </li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#">Next</a>
+                        <li ng-hide="indexQuestion+1 >= questions.length-3" class="page-item"><a href
+                                class="page-link">...</a></li>
+                        <li class="page-item {{(indexQuestion+1 == questions.length)?'disabled':''}}">
+                            <button ng-click="move(indexQuestion+1)" class="page-link" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                                <span class="sr-only">Next</span>
+                            </button>
+                        </li>
+                        <li ng-click="move(questions.length-1)"
+                            class="page-item {{(indexQuestion+1 == questions.length)?'disabled':''}}"><a href
+                                class="page-link">Last</a>
                         </li>
                     </ul>
                 </nav>
@@ -61,7 +140,7 @@
 
         <div class="row">
             <div class="col-12">
-                <button class="btn btn-danger float-start">
+                <button ng-click = "finish()" class="btn btn-danger float-start">
                     Kết thúc bài kiểm tra
                 </button>
             </div>
