--- a/Front-end_Tiennh21/Assignment/layout/Navbar.html
+++ b/Front-end_Tiennh21/Assignment/layout/Navbar.html
@@ -79,7 +79,7 @@
                                         </a>
                                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                             <li ng-repeat="sub in subjects">
-                                                <a class="dropdown-item" href="#!ListTest">
+                                                <a class="dropdown-item" href="#!informationExam/{{sub.Id}}">
                                                     <img src="{{'images/logos/'+sub.Logo}}"
                                                         class="img-fluid rounded-circle hoverable" style="height: 20px;"
                                                         alt="">
