--- a/Front-end_Tiennh21/Assignment/layout/demo.html
+++ b/Front-end_Tiennh21/Assignment/layout/demo.html
@@ -1,72 +1,97 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+
+<html>
 
 <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS v5.0.2 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <title>
+
+        AngularJs $http.put() Service Response Example
+
+    </title>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+
+    <script type="text/javascript">
+
+        var app = angular.module('putserviceApp', []);
+
+        app.controller('putserviceCtrl', function ($scope, $http) {
+
+            $scope.name = null;
+
+            $scope.age = null;
+
+            $scope.adress = null;
+
+            $scope.lblMsg = null;
+
+            $scope.putdata = function (name, age, adress) {
+
+                var data = {
+
+                    name: name,
+
+                    age: age,
+
+                    adress: adress
+
+                };
+
+                //Call the services
+
+                $http.put('/api/users/putmethod', JSON.stringify(data)).then(function (response) {
+
+                    if (response.data)
+
+                        $scope.msg = "Put Data Method Executed Successfully!";
+
+                }, function (response) {
+
+                    $scope.msg = "Service not Exists";
+
+                    $scope.statusval = response.status;
+
+                    $scope.statustext = response.statusText;
+
+                    $scope.headers = response.headers();
+
+                });
+
+            };
+
+        });
+
+    </script>
 
 </head>
 
 <body>
-    <div ng-controller="confirmCtrl">
-        <form name="f1">
-            <div>
-                <label>Password</label>
-                <input type="password" name="EPassword" ng-model="EPassword" required class="form-control" />
-            </div>
 
-            <div>
-                <label>Confirm Password</label>
-                <input type="password" name="ECPassword" ng-model="ECPassword" required compare-to="EPassword"
-                    class="form-control" />
-                <span class="error" ng-show="f1.ECPassword.$error.compareTo">
-                    Passwords don't match.
-                </span>
-            </div>
+    <div ng-app="putserviceApp" ng-controller="putserviceCtrl">
 
-        </form>
+        <div>
+
+            Name : <input ng-model="name" /><br /><br />
+
+            Age : <input ng-model="age" /><br /><br />
+
+            Adress : <input ng-model="adress" /><br /><br />
+
+            <input type="button" value="Send" ng-click="putdata(name, age, adress)" /> <br /><br />
+
+        </div>
+
+        <p>Output Message : {{msg}}</p>
+
+        <p>StatusCode: {{statusval}}</p>
+
+        <p>Status: {{statustext}}</p>
+
+        <p>Response Headers: {{headers}}</p>
+
     </div>
 
-    <script>
-        var app = angular.module("app", []);
-        app.controller("confirmCtrl", function ($scope) {
-            $scope.user = {
-                password: "",
-                confirmPassword: ""
-            };
-        });
-        app.directive("compareTo", function () {
-            return {
-                require: "ngModel",
-                scope:
-                {
-                    confirmPassword: "=compareTo"
-                },
-                link: function (scope, element, attributes, modelVal) {
-                    modelVal.$validators.compareTo = function (val) {
-                        return val == scope.confirmPassword;
-                    };
-                    scope.$watch("confirmPassword", function () {
-                        modelVal.$validate();
-                    });
-                }
-            };
-        });  
-    </script>
-    <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
