--- a/Front-end_Tiennh21/Assignment/layout/demo.html
+++ b/Front-end_Tiennh21/Assignment/layout/demo.html
@@ -1,97 +1,79 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-
-    <title>
-
-        AngularJs $http.put() Service Response Example
-
-    </title>
-
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-
-    <script type="text/javascript">
-
-        var app = angular.module('putserviceApp', []);
-
-        app.controller('putserviceCtrl', function ($scope, $http) {
-
-            $scope.name = null;
-
-            $scope.age = null;
-
-            $scope.adress = null;
-
-            $scope.lblMsg = null;
-
-            $scope.putdata = function (name, age, adress) {
-
-                var data = {
-
-                    name: name,
-
-                    age: age,
-
-                    adress: adress
-
-                };
-
-                //Call the services
-
-                $http.put('/api/users/putmethod', JSON.stringify(data)).then(function (response) {
-
-                    if (response.data)
-
-                        $scope.msg = "Put Data Method Executed Successfully!";
-
-                }, function (response) {
-
-                    $scope.msg = "Service not Exists";
-
-                    $scope.statusval = response.status;
-
-                    $scope.statustext = response.statusText;
-
-                    $scope.headers = response.headers();
-
-                });
-
-            };
-
-        });
-
-    </script>
-
-</head>
-
-<body>
-
-    <div ng-app="putserviceApp" ng-controller="putserviceCtrl">
-
-        <div>
-
-            Name : <input ng-model="name" /><br /><br />
-
-            Age : <input ng-model="age" /><br /><br />
-
-            Adress : <input ng-model="adress" /><br /><br />
-
-            <input type="button" value="Send" ng-click="putdata(name, age, adress)" /> <br /><br />
-
-        </div>
-
-        <p>Output Message : {{msg}}</p>
-
-        <p>StatusCode: {{statusval}}</p>
-
-        <p>Status: {{statustext}}</p>
-
-        <p>Response Headers: {{headers}}</p>
-
-    </div>
-
-</body>
-
-</html>
+<!DOCTYPE html>  
+ <!-- index.php !-->  
+ <html>  
+      <head>  
+           <title>Webslesson Tutorial | AngularJS Tutorial with PHP - Update / Edit Mysql Table Data</title>  
+           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />  
+           <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>  
+      </head>  
+      <body>  
+           <br /><br />  
+           <div class="container" style="width:500px;">  
+                <h3 align="center">AngularJS Tutorial with PHP - Update / Edit Mysql Table Data</h3>  
+                <div ng-app="myapp" ng-controller="usercontroller" ng-init="displayData()">  
+                     <label>First Name</label>  
+                     <input type="text" name="first_name" ng-model="firstname" class="form-control" />  
+                     <br />  
+                     <label>Last Name</label>  
+                     <input type="text" name="last_name" ng-model="lastname" class="form-control" />  
+                     <br />  
+                     <input type="hidden" ng-model="id" />  
+                     <input type="submit" name="btnInsert" class="btn btn-info" ng-click="insertData()" value="{{btnName}}"/>  
+                     <br /><br />  
+                     <table class="table table-bordered">  
+                          <tr>  
+                               <th>First Name</th>  
+                               <th>Last Name</th>  
+                               <th>Update</th>  
+                          </tr>  
+                          <tr ng-repeat="x in names">  
+                               <td>{{x.first_name}}</td>  
+                               <td>{{x.last_name}}</td>  
+                               <td><button ng-click="updateData(x.id, x.first_name, x.last_name)" class="btn btn-info btn-xs">Update</button></td>  
+                          </tr>  
+                     </table>  
+                </div>  
+           </div>  
+      </body>  
+ </html>  
+ <script>  
+ var app = angular.module("myapp",[]);  
+ app.controller("usercontroller", function($scope, $http){  
+      $scope.btnName = "ADD";  
+      $scope.insertData = function(){  
+           if($scope.firstname == null)  
+           {  
+                alert("First Name is required");  
+           }  
+           else if($scope.lastname == null)  
+           {  
+                alert("Last Name is required");  
+           }  
+           else  
+           {  
+                $http.post(  
+                     "insert.php",  
+                     {'firstname':$scope.firstname, 'lastname':$scope.lastname, 'btnName':$scope.btnName, 'id':$scope.id}  
+                ).success(function(data){  
+                     alert(data);  
+                     $scope.firstname = null;  
+                     $scope.lastname = null;  
+                     $scope.btnName = "ADD";  
+                     $scope.displayData();  
+                });  
+           }  
+      }  
+      $scope.displayData = function(){  
+           $http.get("select.php")  
+           .success(function(data){  
+                $scope.names = data;  
+           });  
+      }  
+      $scope.updateData = function(id, first_name, last_name){  
+           $scope.id = id;  
+           $scope.firstname = first_name;  
+           $scope.lastname = last_name;  
+           $scope.btnName = "Update";  
+      }  
+ });  
+ </script>  
