--- a/Front-end_Tiennh21/Assignment/layout/ManagerAccounts.html
+++ b/Front-end_Tiennh21/Assignment/layout/ManagerAccounts.html
@@ -26,7 +26,7 @@
     <div class="row mt-5">
         <div class="col-xs-12 col-lg-4 wrap-form-head-register mt-5" id="register">
             <div class="container"
-                ng-init="studentRegister.gender = 'true'; studentRegister.marks = '0'">
+                ng-init="studentRegister.gender = 'true'; studentRegister.marks = '0'; studentRegister.role = '1'">
                 <form name="formRegister" novalidate>
                     <h4 class="mt-3 mb-4">Start now</h4>
                     <div class="mt-3 ">
@@ -136,30 +136,14 @@
                         </div>
                         <div class="form-check">
                             <input ng-model="studentRegister.gender" class="form-check-input" type="radio"
-                                name="flexRadioDefault" id="flexRadioDefault2" value="0" checked >
+                                name="flexRadioDefault" id="flexRadioDefault2" checked value="0">
                             <label class="form-check-label" for="flexRadioDefault2">
                                 Felmale
                             </label>
                         </div>
                     </div>
+
                     <div class="mt-3 ">
-                        <label for="exampleFormControlInput1" class="form-label">Role</label>
-                        <div class="form-check">
-                            <input ng-model="studentRegister.role" class="form-check-input" type="radio"
-                                name="flexRadioDefault1" id="flexRadioDefault12" value="1">
-                            <label class="form-check-label" for="flexRadioDefault12">
-                                Admin
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input ng-model="studentRegister.role" class="form-check-input" type="radio"
-                                name="flexRadioDefault1" id="flexRadioDefault22" checked value="0">
-                            <label class="form-check-label" for="flexRadioDefault22">
-                                Customer
-                            </label>
-                        </div>
-                    </div>
-                    <div class="mt-3 " ng-show = "index == -1">
                         <div class="form-check">
                             <input name="checkBox" ng-model="chkselct" class="form-check-input" type="checkbox" value=""
                                 id="flexCheckIndeterminate" required>
@@ -169,6 +153,7 @@
                             <small ng-show="validationmsg" id="schoolfee" class="fst-italic text-danger">Bạn có đồng ý
                                 không ?</small>
                         </div>
+
                     </div>
 
                     <div class="row mt-4 mb-4">
@@ -178,7 +163,7 @@
                                 Add Account
                             </button>
                             <button value="submit" class="btn btn-primary justify-content-center col-12"
-                                ng-show="index != -1" ng-click="update()">
+                                ng-show="index != -1" ng-click="update()" >
                                 Update Account
                             </button>
                         </div>
