Revert "no message"
This reverts commit bde0ff8d2dd334bbd6cb7e2c39fb64441bd6e925.

--- a/Front-end_Tiennh21/Assignment/layout/Navbar.html
+++ b/Front-end_Tiennh21/Assignment/layout/Navbar.html
@@ -57,10 +57,10 @@
                                         <a class="nav-link text-white" aria-current="page" href="#">Learning</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link text-white" href="#!about" ng-show="student.role != 1">About Page</a>
+                                        <a class="nav-link text-white" href="#!about">About Page</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link text-white" href="#!Contact"ng-show="student.role != 1" >Contact Page</a>
+                                        <a class="nav-link text-white" href="#!Contact">Contact Page</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link text-white" href="#!Feedback_Home">Feedback Page</a>
@@ -73,9 +73,6 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link text-white" href="#!ManagerAccounts" ng-show="student.role == 1"> Manager Accounts</a>
-                                    </li>
-                                     <li class="nav-item">
-                                        <a class="nav-link text-white" href="#!ManagerQuetions" ng-show="student.role == 1"> Manager Quizz</a>
                                     </li>
                                     <li class="nav-item dropdown">
                                         <a class="nav-link text-white dropdown-toggle" href="#"
